--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "debounce": "^1.0.0",
     "deemon": "^1.13.5",
     "electron": "37.2.3",
+    "esbuild": "^0.25.8",
     "eslint": "^9.11.1",
     "eslint-formatter-compact": "^8.40.0",
     "eslint-plugin-header": "3.1.1",
