--- a/package.json
+++ b/package.json
@@ -96,9 +96,12 @@
     "@xterm/addon-webgl": "^0.19.0-beta.112",
     "@xterm/headless": "^5.6.0-beta.112",
     "@xterm/xterm": "^5.6.0-beta.112",
+    "gulp-merge-json": "^2.2.1",
+    "gulp-sort": "^2.0.0",
     "http-proxy-agent": "^7.0.0",
     "https-proxy-agent": "^7.0.2",
     "jschardet": "3.1.4",
+    "jsonc-parser": "^3.3.1",
     "katex": "^0.16.22",
     "kerberos": "2.1.1",
     "minimist": "^1.2.8",
@@ -108,6 +111,7 @@
     "node-pty": "^1.1.0-beta33",
     "open": "^10.1.2",
     "tas-client-umd": "0.2.0",
+    "ternary-stream": "^3.0.0",
     "v8-inspect-profiler": "^0.1.1",
     "vscode-oniguruma": "1.7.0",
     "vscode-regexpp": "^3.1.0",
@@ -165,7 +169,7 @@
     "fancy-log": "^1.3.3",
     "file-loader": "^6.2.0",
     "glob": "^5.0.13",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-azure-storage": "^0.12.1",
     "gulp-bom": "^3.0.0",
     "gulp-buffer": "0.0.2",
@@ -210,7 +214,7 @@
     "ts-node": "^10.9.1",
     "tsec": "0.2.7",
     "tslib": "^2.6.3",
-    "typescript": "^5.9.0-dev.20250728",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.8.0",
     "util": "^0.12.4",
     "webpack": "^5.94.0",
